# ChangeLog for media-libs/xine-lib
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.231 2005/07/16 20:22:51 josejx Exp $

  16 Jul 2005; Joseph Jezak <josejx@gentoo.org> xine-lib-1.0.1-r3.ebuild:
  Marked ppc stable for bug #98805.

  13 Jul 2005; Markus Rothe <corsair@gentoo.org> xine-lib-1.0.1-r3.ebuild:
  Stable on ppc64 (bug #98805)

  12 Jul 2005; Diego Pettenò <flameeyes@gentoo.org>
  xine-lib-1.0.1-r3.ebuild:
  Marked stable on amd64.

  01 Jul 2005; Sven Wegener <swegener@gentoo.org> xine-lib-1_rc6-r2.ebuild,
  xine-lib-1_rc8-r1.ebuild:
  QA: Clean up the amd64? ( X? ( ) ) dependencies.

*xine-lib-1.0.1-r3 (29 May 2005)

  29 May 2005; Diego Pettenò <flameeyes@gentoo.org>
  +xine-lib-1.0.1-r3.ebuild:
  New revision, with patch to fix 64-bit byteswapping on non-x86 arches.

*xine-lib-1.0.1-r2 (26 May 2005)

  26 May 2005; Diego Pettenò <flameeyes@gentoo.org>
  +xine-lib-1.0.1-r2.ebuild:
  New revision with FreeBSD's ports patches (for compatibility with
  Gentoo/FreeBSD) and external a52dec and libmad (via useflags).

  15 May 2005; Diego Pettenò <flameeyes@gentoo.org>
  xine-lib-1.0.1-r1.ebuild:
  Cleanup of ebuild: using $() syntax for command expansion; better check for
  gcc 3.4 or better (consider gcc 4).

  15 May 2005; Diego Pettenò <flameeyes@gentoo.org>
  xine-lib-1_rc6-r2.ebuild, xine-lib-1_rc8-r1.ebuild,
  xine-lib-1.0-r2.ebuild, xine-lib-1.0-r3.ebuild, xine-lib-1.0-r4.ebuild,
  xine-lib-1.0.1-r1.ebuild:
  Moved to toolchain-funcs eclass.

  09 May 2005; Aron Griffis <agriffis@gentoo.org> xine-lib-1.0-r2.ebuild:
  stable on ia64

  07 May 2005; Diego Pettenò <flameeyes@gentoo.org>
  xine-lib-1.0.1-r1.ebuild:
  Add patch to fix vidix compilation with gcc4. Fixes #90868.

  30 Apr 2005; Diego Pettenò <flameeyes@gentoo.org>
  xine-lib-1.0.1-r1.ebuild:
  Make xine-lib depend on fame just for dxr3 support.

  29 Apr 2005; Diego Pettenò <flameeyes@gentoo.org>