@@ -1,28 +1,30 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 26fcc8c7c4566812f911baef742cf191 xine-lib-1.0-r3.ebuild 7079
-MD5 85c8ecfc2f7acb495ab164a3e43d5d66 ChangeLog 9839
-MD5 05ac5f3e87594fa2a81a1a810983c9cf xine-lib-1_rc8-r1.ebuild 5240
-MD5 13d43d2a540653eeb091a62461004bff xine-lib-1.0.1-r1.ebuild 7276
+MD5 44b4d734c0f0f9389ddaec470bdb2321 ChangeLog 9983
 MD5 5529b17488d439ea93b380bacdb0a7a7 metadata.xml 239
+MD5 eeae60c214ca25ce0c9e4dbd37044004 xine-lib-1.0-r2.ebuild 7087
+MD5 26fcc8c7c4566812f911baef742cf191 xine-lib-1.0-r3.ebuild 7079
+MD5 13d43d2a540653eeb091a62461004bff xine-lib-1.0.1-r1.ebuild 7276
+MD5 6b5209f80c08295cc46aa8953f88945f xine-lib-1_rc6-r2.ebuild 5200
+MD5 05ac5f3e87594fa2a81a1a810983c9cf xine-lib-1_rc8-r1.ebuild 5240
 MD5 d369fe96b3307250f3d22c3b13785e35 xine-lib-1.0-r4.ebuild 7186
 MD5 c89993f4f2567fbcf104e0b7761fb06f xine-lib-1.0.1-r2.ebuild 7423
 MD5 301bdcd736db151e25aafb70a97d5290 xine-lib-1.0.1-r3.ebuild 7439
-MD5 eeae60c214ca25ce0c9e4dbd37044004 xine-lib-1.0-r2.ebuild 7087
-MD5 6b5209f80c08295cc46aa8953f88945f xine-lib-1_rc6-r2.ebuild 5200
+MD5 2ac71897a4384de428b8362b6e04c5d3 xine-lib-1.0.2.ebuild 7442
 MD5 44995c2f2dc4faa99ed2795e5e401719 files/digest-xine-lib-1.0-r2 134
 MD5 44995c2f2dc4faa99ed2795e5e401719 files/digest-xine-lib-1.0-r3 134
 MD5 44995c2f2dc4faa99ed2795e5e401719 files/digest-xine-lib-1.0-r4 134
+MD5 bc7fc1f6b4a7e138d92e29e0231afd6f files/digest-xine-lib-1.0.1-r1 136
 MD5 57a9f924e9a78a68610f12a3f59435b3 files/digest-xine-lib-1_rc6-r2 139
 MD5 51e97df2f6ae538ab33a802eafb10457 files/digest-xine-lib-1_rc8-r1 138
-MD5 bc7fc1f6b4a7e138d92e29e0231afd6f files/digest-xine-lib-1.0.1-r1 136
-MD5 9678227c043f04d5e8561cb6ba80d3e6 files/digest-xine-lib-1.0.1-r3 137
 MD5 5f84d7a1d762461967b5a9d45da70e9b files/digest-xine-lib-1.0.1-r2 137
+MD5 9678227c043f04d5e8561cb6ba80d3e6 files/digest-xine-lib-1.0.1-r3 137
+MD5 b5cff6ac57a1f66ac90f95608a138717 files/digest-xine-lib-1.0.2 137
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFC2WyqcsIHjyDViGQRAjLfAJwPcrdFmbmsQa/AfrwCR5OnKHJKGwCfYujs
-mP6bUXTiXrddScHB74eVrEE=
-=5ons
+iD8DBQFC5qq1j5H05b2HAEkRArcGAJ9gahrDNoj6d+GvtRFSfkjjNv+7VACeLmaE
+Mk4cWvcDC/STjDWCidgOPfU=
+=7Z0C
 -----END PGP SIGNATURE-----
