@@ -1,0 +1,2 @@
+MD5 f193aa14017ef104b797ccde9d82edc9 xine-lib-1.0.2.tar.gz 7774805
+MD5 d5fd94c89eb0630e78dfecfdb6db4573 xine-lib-patches-6.tar.bz2 15344
