@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/xine-lib
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.231 2005/07/16 20:22:51 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.232 2005/07/26 21:26:25 flameeyes Exp $
+
+*xine-lib-1.0.2 (26 Jul 2005)
+
+  26 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> +xine-lib-1.0.2.ebuild:
+  New upstream version (1.0.2).
 
   16 Jul 2005; Joseph Jezak <josejx@gentoo.org> xine-lib-1.0.1-r3.ebuild:
   Marked ppc stable for bug #98805.
